.omo/evidence/controller-webhook-split-deployment/combined/live-combined-20260727251000/admission-validating-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: "2026-07-27T15:31:17Z"
  generation: 1
  name: echo-operator.echo-smoke-combined-live-combined-20260727251000.echo.example.com
  resourceVersion: "2230727"
  uid: aaa23ba7-c618-476b-be96-af1a0a3fea02
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURlekNDQW1PZ0F3SUJBZ0lVY2MveTBOUzRxN1h5WWJId2JDOWhnQlliaFNvd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1ZERlNNRkFHQTFVRUF3eEpaV05vYnkxemJXOXJaUzFqYjIxaWFXNWxaQzFzYVhabExXTnZiV0pwYm1WawpMVEl3TWpZd056STNNalV4TURBd0xXVmphRzh0YjNCbGNtRjBiM0lnZDJWaWFHOXZheUJEUVRBZUZ3MHlOakEzCk1qY3hOVE14TVRaYUZ3MHlOekEzTWpjeE5UTXhNVFphTUZReFVqQlFCZ05WQkFNTVNXVmphRzh0YzIxdmEyVXQKWTI5dFltbHVaV1F0YkdsMlpTMWpiMjFpYVc1bFpDMHlNREkyTURjeU56STFNVEF3TUMxbFkyaHZMVzl3WlhKaApkRzl5SUhkbFltaH [...]
    service:
      name: echo-smoke-combined-live-combined-20260727251000-echo-operator
      namespace: echo-smoke-combined-live-combined-20260727251000
      path: /validate/echo.example.com
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: echo-operator.echo-smoke-combined-live-combined-20260727251000.echo.example.com
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - example.com
    apiVersions:
    - v1alpha1
    - v1alpha2
    operations:
    - CREATE
    - UPDATE
    resources:
    - echoresources
    scope: Namespaced
  sideEffects: None
  timeoutSeconds: 10
